# cptp

./: .dockerignore  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  llm-analysis.yml
bench/: bench_hyperplane.sh  bench_separators.cpp  compare_pathwyse.py  experiment_params.sh  progress.csv
bench/instances/roberti/: optimal.csv
bench/instances/spprclib/: A-n61-k9-80.sppcc  A-n63-k10-44.sppcc  A-n65-k9-10.sppcc  A-n80-k10-14.sppcc  B-n45-k6-54.sppcc  B-n50-k8-40.sppcc  B-n67-k10-26.sppcc  E-n76-k14-102.sppcc  G-n262-k25-316.sppcc  M-n121-k7-260.sppcc  M-n151-k12-15.sppcc  M-n200-k16-143.sppcc  P-n101-k4-174.sppcc  P-n50-k8-19.sppcc  P-n55-k10-44.sppcc  P-n55-k15-88.sppcc  P-n55-k8-260.sppcc  P-n65-k10-102.sppcc  P-n76-k4-41.sppcc  optimal.csv
benchmarks/: ablation.csv  bench_hyperplane.sh  bench_ubs_cutoff.py  check_optimal.sh  compare_pathwyse.py  compare_pathwyse.sh  cptp.csv  experiment_params.sh  experiment_rc_fixing.sh  experiment_spi.sh  pathwyse.csv  pathwyse_results.csv  rc_fixing_study.csv  run_ablation.sh  run_benchmarks.sh  run_pathwyse_reference.sh  setup_pathwyse.sh
benchmarks/instances/roberti/: optimal.csv
benchmarks/instances/spprclib/: A-n54-k7-149.sppcc  A-n60-k9-57.sppcc  A-n62-k8-99.sppcc  A-n63-k9-157.sppcc  A-n64-k9-45.sppcc  A-n69-k9-42.sppcc  B-n52-k7-15.sppcc  B-n57-k7-20.sppcc  B-n66-k9-50.sppcc  B-n68-k9-65.sppcc  B-n78-k10-70.sppcc  E-n101-k14-158.sppcc  E-n101-k8-291.sppcc  E-n76-k10-72.sppcc  E-n76-k15-40.sppcc  E-n76-k7-44.sppcc  M-n101-k10-97.sppcc  M-n200-k17-12.sppcc  P-n50-k10-24.sppcc  P-n50-k7-92.sppcc  P-n51-k10-30.sppcc  P-n55-k7-116.sppcc  P-n60-k10-24.sppcc  P-n60-k15-8.sppcc  P-n70-k10-12.sppcc  P-n76-k5-16.sppcc
ci/: Dockerfile  analyze.sh  llm-review.sh
cmake/: CompilerFlags.cmake  FetchHiGHS.cmake  generate_version.cmake
docs/: ROADMAP.md  algorithms.md  api.md  applications.md  benchmarks.md  cli.md  cpp-api.md  domain-propagator.md  getting-started.md  hyperplane-branching.md  index.md  instance-formats.md  ng-dssr-design.md  ng-dssr-labelling.md  preprocessing.md  primal-heuristic.md  python-api.md  rglm-separator.md  roadmap.md  separation.md  solve-concurrency.md  warm-start-heuristic.md
docs/benchmarks/: progress.csv
python/: CMakeLists.txt  bindings.cpp
python/cptp/: __init__.py  __main__.py  solver.py
python/rcspp_bac/: __init__.py  __main__.py  solver.py
src/cli/: main.cpp  version.h.in
src/core/: digraph.h  dinitz.h  gomory_hu.h  io.cpp  io.h  problem.cpp  problem.h  solution.h  static_graph.h
src/heuristic/: primal_heuristic.cpp  primal_heuristic.h  warm_start.h
src/model/: async_incumbent.h  deterministic_checkpoint.h  highs_bridge.cpp  highs_bridge.h  model.cpp  model.h  resource.h  solve_concurrency_guard.h
src/parallel/: parallel.h
src/preprocess/: bound_propagator.cpp  bound_propagator.h  edge_elimination.h  ng_labeling.h  reachability.h  shared_bounds.h
src/sep/: comb_separator.cpp  comb_separator.h  cut.h  multistar_separator.cpp  multistar_separator.h  rci_separator.cpp  rci_separator.h  rglm_separator.cpp  rglm_separator.h  sec_separator.cpp  sec_separator.h  separation_context.h  separation_oracle.cpp  separation_oracle.h  separator.h  spi_separator.cpp  spi_separator.h
src/util/: logger.h  timer.h  work_unit_budget.h
tests/: test_formulation.cpp  test_heuristic_stage_ub.cpp  test_instances.cpp  test_max_flow.cpp  test_model.cpp  test_ng_labeling.cpp  test_optimal.cpp  test_oracle.cpp  test_path_cut_validity.cpp  test_propagator.cpp  test_separators.cpp  test_spi.cpp  test_thread_local.cpp  test_ubs_cutoff.cpp
tests/data/: heuristic_stage_ub_ils.csv  tiny3.vrp  tiny4.txt  tiny4_path.txt
tests/python/: test_algorithms.py  test_local_install.py  test_solver.py
