[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cptp"
version = "0.1.0"
description = "Branch-and-cut solver for the Capacitated Profitable Tour Problem"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.scripts]
cptp = "cptp.__main__:main"

[tool.scikit-build]
cmake.args = ["-DCPTP_BUILD_PYTHON=ON", "-DCPTP_BUILD_TESTS=OFF"]
cmake.minimum-version = "3.25"
cmake.build-type = "Release"
wheel.packages = ["python/cptp"]
