[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cptp"
version = "0.1.0"
description = "Branch-and-cut solver for the Capacitated Profitable Tour Problem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/spoorendonk/cptp"

[project.scripts]
cptp = "cptp.__main__:main"

[tool.scikit-build]
cmake.args = ["-DCPTP_BUILD_PYTHON=ON", "-DCPTP_BUILD_TESTS=OFF"]
cmake.minimum-version = "3.25"
cmake.build-type = "Release"
wheel.packages = ["python/cptp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C901", # mccabe complexity
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
